put and delete ready
